2006-01-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.3.1

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.3.1.

2006-01-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	  Changed preview_save_check_button wording.

	* lib/gaupol/gtk/delegates/preview.py:
	  (PreviewDelegate.on_preview_activated): Save file only if it is
	  changed.

	* lib/gaupol/gtk/dialogs/spellcheck.py:
	  Use config.editor.font if set to use custom font.
	  Cosmetic fixes.

	* lib/gaupol/gtk/util/gtklib.py:
	  (set_label_font): New function.
	  (set_widget_font): New function.

2006-01-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.3.0

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.3.0.

2006-01-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/appupdate.py:
	* lib/gaupol/gtk/util/gtklib.py:
	  Fixed some NOTE comments.

2006-01-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/preview.py:
	  Fixed preview to use the subprocess module.

2006-01-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/util/config.py:
	  (preview.command): Removed the -quiet option.

2006-01-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/fileopen.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Renamed nested sort functions to "sort".

2006-01-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	  Cosmetic fixes.

	* data/glade/language-dialog.glade:
	  Put the tree views in a homogenous hbox.
	  Removed hardcoded sizes.

	* data/glade/multiclose-dialog.glade:
	  Made dialog resizable.

	* data/glade/preferences-dialog.glade:
	  Added preview tab.

	* data/glade/previewerror-dialog.glade:
	* lib/gaupol/base/delegates/preview.py:
	* lib/gaupol/gtk/delegates/preview.py:
	  New files with preview implementation.

	* data/glade/spellcheck-dialog.glade:
	  Removed hardcoded tree view size.

	* data/ui/menubar.xml:
	* data/ui/popups.xml:
	* data/ui/toolbar.xml: